# nexus

./: .dockerignore  .env.docker.example  .env.example  .env.production  .gitignore  .mailmap  .nexus-admin-env  .pre-commit-config.yaml  <MagicMock name='mock._redb_path' id='5757785424'>  API-TEST-RESULTS.md  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  BUG-PERMISSION-CHECK.md  CHANGELOG.md  CLAUDE.md  CLI.md  CODEBASE_REVIEW_2026.md  CONTRIBUTING.md  CRASH_REPRODUCTION_GUIDE.md  CRASH_REPRODUCTION_RESULTS.md  Cargo.toml  DEPLOYMENT_QUICK_START.md  DEPRECATION.md  DOCKER.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.pypi  FINAL_VALIDATION_REPORT.md  GITHUB_ISSUE_DATABASE_CRASH.md  GITHUB_SETUP.md  INFRASTRUCTURE_API_KEY_VERIFIED.md  ISSUES_SUMMARY.md  MAINTAINABILITY_REVIEW.md  MEMORY_BRICK_VALIDATION.md  MERGE_CONFLICT_ANALYSIS.md  Makefile  NEXT_STEPS.md  NEXUS_COMPREHENSIVE_ARCHITECTURE.md  PHASE_1_PROGRESS.md  PHASE_2_PROGRESS.md  (+66 more)
nexus-bench/: Cargo.toml  EPIC-4061.md  README.md
nexus-bench/baselines/: develop-5698d0026-noop.json
nexus-bench/matrices/: epic-4061.json
nexus-bench/src/: cli.rs  error.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs  suite.rs  threshold.rs  trace.rs
nexus-bench/tests/: epic_traces.rs
nexus-bench/thresholds/: ci-noop.json  default.json
nexus-bench/traces/: agent-cold-start.json  agent-warm-trace.json  bursty-write.json  concurrent-reads.json  metadata-storm.json  read-after-write.json  seq-large-read.json  stride-read.json
nexus-fuse/: ARCHITECTURE.md  Cargo.toml  Dockerfile.cache-warm-e2e  PERFORMANCE_RESULTS.md  e2b.toml  run-benchmarks.sh  test_cache_warm.py  test_fuse_mount_cache_warm.py  test_mount_integration.py  test_python_ipc.py  test_rust_fuse.py  test_spawn_cache_warm_live.py
nexus-fuse/benches/: cache_backends.rs  concurrent_read.rs  fuse_operations.rs
nexus-fuse/src/: cache.rs  cached_read.rs  client.rs  daemon.rs  error.rs  fs.rs  hydrate.rs  lib.rs  main.rs  metrics.rs
nexus-fuse/tests/: concurrent_stress_test.rs  error_handling_test.rs  integration_test.rs  minimal_http_test.rs
rust/backends/: Cargo.toml
rust/backends/src/: lib.rs
rust/cluster/: Cargo.toml
rust/cluster/src/: main.rs
rust/contracts/: Cargo.toml
rust/contracts/src/: constants.rs  lib.rs  lock_state.rs  operation_context.rs
rust/kernel/: Cargo.toml  INTEGRATION.md  README.md  build.rs  pyproject.toml  test_lock.py  test_nexus_fast.py
rust/kernel/benches/: ops_registry_bench.rs  prefix_bench.rs  read_batch.rs  syscall_bench.rs  write_coalescing.rs
rust/kernel/src/: _backend_impls.rs  abi.rs  agent_registry.rs  agent_registry_py.rs  agent_status_resolver.rs  anthropic_backend.rs  anthropic_streaming.rs  audit_hook.rs  backend.rs  batch_read_py.rs  bitmap.rs  blob_fetcher.rs  cas_chunking.rs  cas_engine.rs  cas_remote.rs  cas_transport.rs  cli_backend.rs  dcache.rs  dispatch.rs  dlc.rs  federation_client.rs  file_watch.rs  gcs_backend.rs  gdrive_backend.rs  generated_kernel_abi_pyo3.rs  generated_pyo3.rs  gmail_backend.rs  grpc_backend.rs  grpc_server.rs  hash.rs  hn_backend.rs  hook_registry.rs  kernel.rs  lib.rs  llm_streaming.rs  lock.rs  lock_manager.rs  mailbox_stamping_hook.rs  metadata_debug.rs  metastore.rs  (+42 more)
rust/kernel/tests/: read_batch_speedup.rs
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
rust/managed-agent-runtime/: Cargo.toml
rust/managed-agent-runtime/src/: lib.rs  mailbox_stamping_hook.rs  workspace_boundary_hook.rs
rust/nexus-cdylib/: Cargo.toml  pyproject.toml
rust/nexus-cdylib/src/: lib.rs
rust/nexus-prefetch/: Cargo.toml
rust/nexus-prefetch/benches/: throughput.rs
rust/nexus-prefetch/src/: config.rs  detector.rs  engine.rs  error.rs  lib.rs  metrics.rs  pattern.rs  pyo3_bindings.rs  range_reader.rs  session.rs  worker.rs
rust/nexus-prefetch/tests/: integration.rs
rust/nexus_core/: Cargo.toml
rust/nexus_core/src/: glob.rs  hash.rs  lib.rs  types.rs
rust/nexus_fast/: Cargo.toml  README.md  test_nexus_fast.py
rust/nexus_fast/src/: blake3_hash.rs  cache.rs  glob_filter.rs  grep.rs  io.rs  lib.rs  rebac.rs  similarity.rs  tiger_cache.rs
rust/nexus_kernel/: Cargo.toml  INTEGRATION.md  README.md  pyproject.toml  test_lock.py  test_pipe.py
rust/nexus_kernel/benches/: prefix_bench.rs
rust/nexus_kernel/src/: backend.rs  cas_engine.rs  dispatch.rs  dispatch_adapters.rs  gcs_backend.rs  generated_adapters.rs  generated_dispatch.rs  generated_pyo3.rs  hook_registry.rs  io.rs  kernel.rs  lib.rs  lock.rs  metastore.rs  openai_inference.rs  permission_hook.rs  pipe.rs  pipe_manager.rs  rebac.rs  replication.rs  router.rs  s3_backend.rs  shm_pipe.rs  shm_stream.rs  stream.rs  stream_manager.rs  volume_engine.rs
rust/nexus_pyo3/: Cargo.toml  INTEGRATION.md  README.md  pyproject.toml  test_lock.py  test_nexus_fast.py  test_pipe.py
rust/nexus_pyo3/benches/: prefix_bench.rs
rust/nexus_pyo3/src/: backend.rs  bitmap.rs  bloom.rs  cache.rs  cas_engine.rs  cas_transport.rs  dcache.rs  dispatch.rs  hash.rs  io.rs  kernel.rs  lib.rs  lock.rs  metastore.rs  path_utils.rs  pipe.rs  rebac.rs  router.rs  search.rs  semaphore.rs  simd.rs  stream.rs  syscall.rs  trigram.rs  volume_engine.rs  volume_index.rs
rust/nexus_raft/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
rust/nexus_raft/proto/: raft.proto
rust/nexus_raft/src/: lib.rs  pyo3_bindings.rs
rust/nexus_raft/tests/: test_grpc_cluster.rs
rust/nexus_tasks/: Cargo.toml  pyproject.toml
rust/nexus_tasks/src/: engine.rs  error.rs  lib.rs  priority.rs  store.rs
rust/nexus_wal/: Cargo.toml
rust/nexus_wal/benches/: wal_bench.rs
rust/nexus_wal/src/: lib.rs  pyo3_bindings.rs  recovery.rs  segment.rs  wal.rs
rust/profiles/cluster/: Cargo.toml
rust/raft/: Cargo.toml  build.rs  pyproject.toml
rust/raft/src/: blob_fetcher.rs  blob_fetcher_handler.rs  cas.rs  distributed_coordinator.rs  federation_provider.rs  lib.rs  pyo3_bindings.rs  replication_scanner.rs  wal_stream_backend.rs  zone_handle.rs  (+3 more)
rust/rpc/: Cargo.toml
rust/services/: Cargo.toml
rust/tasks/: Cargo.toml  pyproject.toml
rust/transport/: Cargo.toml
(+9185 files in other folders)
