[workspace]
resolver = "2"
members = [
    "rust/contracts",
    # `rust/shared/` holds the workspace's lowest shared layer:
    # `shared/lib` (algorithms, WASM-clean) + `shared/transport-primitives`
    # (TLS / pool / addressing / TOFU / PeerBlobClient trait). Every
    # peer crate depends on these but they never depend on a peer
    # crate, which is what keeps the workspace dep graph acyclic.
    "rust/shared/lib",
    "rust/shared/transport-primitives",
    "rust/transport",
    "rust/kernel",
    "rust/backends",
    "rust/services",
    "rust/raft",
    # Driver-outgoing RPC clients: VFS gRPC (RemoteBackend), peer-blob
    # fetch, federation peer client. Driver-layer crate alongside
    # `backends/` and `raft/`. The single directed edge between driver-
    # layer crates is `rpc -> raft` — rpc is the "raft protocol client"
    # so it references raft's wire-format proto stubs.
    "rust/rpc",
    # Phase 3 restructure plan #6: rust/tasks folded into rust/services/src/tasks/.
    # Phase 4 (full) — deployment profile binaries get their own folder.
    # Today only `cluster` (Sudowork's `nexusd-cluster` ELF/EXE) lives
    # under `rust/profiles/`; future profiles (slim / full / embedded /
    # lite / cloud / remote) each get their own subdirectory there.
    # See KERNEL-ARCHITECTURE.md §7 for profile semantics.  The cdylib
    # below stays at workspace top-level because it's a Python-SDK
    # *artifact*, not a deployment profile.
    "rust/profiles/cluster",
    # Phase 0: thin cdylib that produces `nexus_kernel.so` by composing
    # `kernel + lib + raft + backends + services + transport` rlibs.
    # Build artifact only — not an architectural tier; see
    # `docs/architecture/KERNEL-ARCHITECTURE.md` §6.1.
    "rust/nexus-cdylib",
]
# nexus-fuse excluded: standalone FUSE daemon with different dependency versions
exclude = ["nexus-fuse"]

[workspace.dependencies]
contracts = { path = "rust/contracts" }
lib = { path = "rust/shared/lib" }
# `transport-primitives` lives at the lowest shared layer (TLS / pool /
# addressing / TOFU trust store / PeerBlobClient trait) — every peer
# crate depends on it, it depends only on `contracts`.
# `transport` is the front-door services crate (VFS gRPC server + IPC
# envelope helpers) — depends on kernel + shared/transport-primitives.
transport-primitives = { path = "rust/shared/transport-primitives" }
transport = { path = "rust/transport" }
services = { path = "rust/services" }
# Driver impls (Phase 2). The `python` feature is enabled by the
# `nexus-cdylib` build-artifact crate so its `#[pymodule]` can expose
# backends' `#[pyclass]` types alongside the kernel's own.
backends = { path = "rust/backends" }
# `kernel` is rlib-only after Phase 0 — the Python entry-point cdylib
# `nexus_kernel.so` lives in `rust/nexus-cdylib/`. `default-features =
# false` keeps the kernel runtime defaults (mimalloc allocator, HTTP
# connector stack, py-hook adapters) off in transitive consumers
# (backends / services / transport rlibs); `nexus-cdylib` opts back in
# explicitly. This is the cycle break that lets `<peer-crate> -> kernel`
# coexist with cdylib registration of peer-crate `#[pyclass]`es.
kernel = { path = "rust/kernel", default-features = false }
# raft is an rlib pulled into the `nexus_kernel.so` cdylib via the
# nexus-cdylib build artifact (alongside kernel). Direction is
# `nexus-cdylib -> {kernel, raft}` only — no cycle. Other crates
# (kernel, etc.) use raft as a workspace dep too; the `python` +
# `grpc` feature flags here apply uniformly.
raft = { path = "rust/raft", default-features = false, features = ["python", "grpc"] }
# Driver-outgoing RPC clients (VFS, peer-blob, federation). The
# `python` feature unions the PyO3 install hooks into a single
# `rpc::python::register(m)` entry consumed by the cdylib.
rpc = { path = "rust/rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
regex = "1.10"
memchr = "2.7"
roaring = "0.10"
globset = "0.4"
blake3 = "1.5"
string-interner = "0.17"
regex-syntax = "0.8"
crc32fast = "1.4"
fastcdc = "3.2"
mimalloc = { version = "0.1", default-features = false }
tonic = { version = "0.13", features = ["transport", "tls-ring"] }
prost = "0.13"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

# Cluster binary ships standalone for sudowork; size matters more than
# raw throughput. opt-level="z" picks the cluster code path that
# minimizes object size. On Linux x86_64 with workspace-wide
# strip="symbols", the binary lands around 5-6 MB; on Windows MSVC
# the .exe is closer to 8 MB (PE headers + import tables don't
# compress as much as stripped ELF). CI's size gate (Group F) checks
# the Linux artifact.
[profile.release.package.nexus-cluster]
opt-level = "z"
