[project]
name = "nexus-ai-fs"
version = "0.7.1.dev0"
description = "AI-Native Distributed Filesystem Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team", email = "team@nexus.example.com"}
]
maintainers = [
    {name = "Nexus Team", email = "team@nexus.example.com"}
]
keywords = [
    "filesystem",
    "ai",
    "agents",
    "storage",
    "distributed",
    "llm",
    "vector-search",
    "content-addressable"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI (needed for basic CLI stub)
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.0", # Progress bars for sync operations
    # Configuration
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    # HTTP client (for remote mode)
    "httpx[http2]>=0.28.1",
    "requests>=2.31.0",
    "tenacity>=8.2.0", # Retry logic with exponential backoff
    # Python 3.14 compatibility - pin transitive deps with wheels
    "aiohttp>=3.11.0",
    "frozenlist>=1.5.0",
    "grpcio>=1.68.0",
    # HTTP server (FastAPI + ASGI)
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0", # ASGI server
    "uvloop>=0.22.1; sys_platform != 'win32'", # Fast event loop (Unix only, 2-4x faster)
    # File watching (Linux only - Windows uses native ReadDirectoryChangesW)
    "inotify_simple>=1.3.0; sys_platform == 'linux'",
    # Database
    "sqlalchemy>=2.0.44",
    "alembic>=1.13.0",
    "greenlet>=3.0.0", # Required for SQLAlchemy async (run_sync in async context)
    "psycopg2-binary>=2.9.10", # PostgreSQL driver (sync)
    "asyncpg>=0.31.0", # PostgreSQL driver (async)
    "aiosqlite>=0.20.0", # SQLite driver (async)
    # Caching
    "cachetools>=6.2.2",
    "redis>=7.0.0",  # Redis/Dragonfly client (async support)
    # Authentication
    "authlib>=1.6.5", # JWT and OAuth support for OIDC auth
    "bcrypt>=4.0.0", # Password hashing for local auth
    "cryptography>=41.0.0", # OAuth token encryption (Fernet) + Ed25519 identity signing
    "PyJWT>=2.8.0", # JWT-VC issuance/verification for agent identity (Issue #1355)
    # Cloud Storage Backends
    "boto3>=1.42.4", # AWS SDK for Python (S3 connector)
    "google-cloud-storage>=3.6.0",
    "google-api-python-client>=2.187.0", # Google Drive API
    "google-auth>=2.43.0", # Google authentication
    "google-auth-httplib2>=0.2.1", # Google auth HTTP adapter
    "google-auth-oauthlib>=1.2.0", # Google OAuth flow
    "slack-sdk>=3.39.0", # Slack API for Slack connector
    # LLM Provider Abstraction
    "litellm>=1.8.10", # Multi-provider LLM support
    "tiktoken>=0.12", # Token counting for OpenAI models and chunking
    "anthropic>=0.75", # Native Anthropic SDK for better Claude support
    "dotenv>=0.9.9",
    # MCP Server (v0.7.0)
    "fastmcp>=0.2.0", # Model Context Protocol server
    # Document parsing (Python 3.13 only - not yet compatible with 3.14)
    "markitdown[all]>=0.1.0; python_version < '3.14'",
    # Fast JSON serialization (2-3x faster than stdlib json)
    "orjson>=3.10.0",
    # Roaring Bitmaps for Tiger Cache (Issue #682)
    "pyroaring>=1.0.0",
    "blake3>=1.0.0",
    # Binary delta sync for rsync-style incremental updates (Issue #869)
    "bsdiff4>=1.2.0",
    # Content-Defined Chunking for large file deduplication (Issue #1074)
    "fastcdc>=1.5.0",
    # BM25S for 500x faster ranked text search (Issue #796)
    "bm25s>=0.2.0",
    # Rapidfuzz for fast fuzzy string matching in edit engine (Issue #800)
    # 10-100x faster than difflib (Rust-backed)
    "rapidfuzz>=3.0.0",
    # LZ4 compression for ContentCache 3-4x capacity (Issue #908)
    "lz4>=4.3.0",
    # Rate limiting for DoS protection (Issue #780)
    "slowapi>=0.1.9",
    "limits>=3.6.0",
    # OpenTelemetry observability (Issue #764)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    # Affinity-based memory consolidation (Issue #1026 - SimpleMem-inspired)
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
performance = [
    # BLAKE3 hashing fallback when Rust extension unavailable (Issue #582)
    # Local embeddings without API (fast ONNX inference)
    "fastembed>=0.4.0",
]

mobile = [
    # GGUF model support via llama.cpp (Issue #1214)
    # For local embedding inference on mobile/edge devices
    "llama-cpp-python>=0.2.0",
]

dev = [
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.8.0",  # Parallel test execution
    "freezegun>=1.4.0",  # Time mocking for tests
    "hypothesis>=6.0.0",  # Property-based testing for crypto/identity (Issue #1355)

    # Code Quality
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",

    # Type stubs
    "types-pyyaml>=6.0.12",
    "types-cachetools>=5.3.0",
    "types-requests>=2.31.0",
]

test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "freezegun>=1.4.0",  # Time mocking for tests
    # LangGraph integration tests
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

fuse = [
    # FUSE filesystem support
    "fusepy>=3.0.1",  # Python FUSE bindings
]

postgres = [
    # PostgreSQL support
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
]

semantic-search = [
    # Keyword search support - uses existing SQLite/PostgreSQL FTS
    # BM25S is now in core dependencies (Issue #796)
    # Vector database extensions for semantic/hybrid search:
    "sqlite-vec>=0.1.0",  # SQLite vector search (pip installable)
    "pgvector>=0.3.0",    # PostgreSQL vector search (Python client - requires pgvector extension in database)
]

semantic-search-remote = [
    # Remote embedding providers (lightweight, requires API keys)
    # Recommended: OpenAI embeddings (default for semantic search)
    "openai>=1.0.0",
]

e2b = [
    # E2B cloud sandbox support (stateful Python execution via Jupyter kernel)
    "e2b-code-interpreter>=1.0.0",
]

docker = [
    # Docker sandbox provider (local containerized execution)
    "docker>=7.0.0",
]

# First-party plugins (install manually for now - not yet published to PyPI)
# anthropic = [
#     "nexus-plugin-anthropic>=0.1.0",
# ]
#
# skill-seekers = [
#     "nexus-plugin-skill-seekers>=0.1.0",
# ]
#
# plugins = [
#     "nexus-plugin-anthropic>=0.1.0",
#     "nexus-plugin-skill-seekers>=0.1.0",
# ]

all = [
    # All optional features (plugins must be installed manually)
    # Default embedding provider: OpenAI (lightweight, requires API key)
    # Excludes: sentence-transformers (too heavy ~2GB), voyageai (specialized use case)
    # Note: fusepy removed - Rust nexus-fuse binary is bundled in the package
    # Note: bm25s is now in core dependencies (Issue #796)
    "psycopg2-binary>=2.9.9",
    "sqlite-vec>=0.1.0",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nexi-lab/nexus"
Documentation = "https://github.com/nexi-lab/nexus/blob/main/README.md"
Repository = "https://github.com/nexi-lab/nexus"
Issues = "https://github.com/nexi-lab/nexus/issues"
Changelog = "https://github.com/nexi-lab/nexus/blob/main/CHANGELOG.md"

[project.scripts]
# CLI entry point - now separated from library code
nexus = "nexus.cli:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "nexus._nexus_fast"
# Build Rust extension as optional - pure Python wheel will work without it
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-n", "auto",                 # Parallel execution (auto-detect CPU cores)
    "--dist", "loadgroup",        # Group tests by xdist_group marker for serial execution
    "--ignore=tests/evaluation",  # Exclude LLM evaluation tests from default runs
]
# Coverage disabled by default for faster local runs. Enable in CI:
#   pytest --cov=nexus --cov-report=term-missing --cov-report=html --cov-report=xml
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmarks",
    "evaluation: marks tests as LLM evaluation tests (requires ANTHROPIC_API_KEY)",
    "quarantine: Tests that are flaky or timing-dependent (deselected by default in CI)",
]

[tool.coverage.run]
source = ["src/nexus"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/cli.py",  # Old location (kept for backward compatibility)
    "src/nexus/cli/*",  # CLI is tested via integration tests in examples/test_cli_commands.sh
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.mypy]
# Type checking configuration - Phase 3 will enable full strict mode
python_version = "3.11"
exclude = [
    "nexus/raft/",  # Generated gRPC/protobuf code (Issue #1159)
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true  # Phase 3: Will fix all 531 type: ignore comments
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true  # Phase 3: Will remove and add proper stubs
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Phase 3 goals (currently have 531 type: ignore comments to eliminate):
# - disallow_any_generics = true
# - disallow_any_unimported = true
# - disallow_subclassing_any = true
# - strict = true

[[tool.mypy.overrides]]
module = [
    "click.*",
    "rich.*",
    "alembic.*",
    "google.cloud.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nexus.backends.gcs"
# Legacy backend - not yet migrated to HandlerResponse
disable_error_code = ["attr-defined", "override", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.gcs_connector"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.s3_connector"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.local"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.hn_connector"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.gdrive_connector"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.base_blob_connector"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.passthrough"
# HandlerResponse.error() returns HandlerResponse[None] but functions return HandlerResponse[T]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.core.file_watcher"
# inotify_simple and pywin32 return untyped values
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.gmail_connector"
# Legacy backend - not yet migrated to HandlerResponse
disable_error_code = ["override", "return-value", "no-any-return", "import-untyped", "unused-ignore"]

[[tool.mypy.overrides]]
module = "nexus.backends.x_connector"
# Legacy backend - not yet migrated to HandlerResponse
disable_error_code = ["override", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.slack_connector"
# New backend - HandlerResponse migration in progress
disable_error_code = ["override", "return-value", "arg-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.slack_connector_utils"
# Slack API utilities
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.server.auth.slack_oauth"
# Slack OAuth provider
disable_error_code = ["no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "nexus.core.nexus_fs_oauth"
# OAuth email handling
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "test_slack_connector",
    "load_secrets_from_gcp",
]
# Script files - relaxed type checking
disallow_untyped_defs = false
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "*.examples.*",
    "examples.*",
]
# Relax strictness for example files
disallow_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "nexus.llm.provider"
# litellm's completion_cost has complex overloads that mypy can't resolve with **kwargs
# Different mypy versions handle this differently, so we disable the check
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "nexus.cache.dragonfly"
# redis library has complex async types that mypy struggles with
warn_unused_ignores = false
disable_error_code = ["no-any-return", "no-untyped-def", "return-value", "import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.core.tiger_cache"
# redis library has complex types that mypy struggles with
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.storage.cache"
# cachetools library has complex generic types
disable_error_code = ["no-any-return", "misc", "call-overload", "import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.search.embeddings"
# Provider wrapper class has complex inheritance, openai stubs mismatch
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "nexus.workflows.loader",
    "nexus.skills.skill_generator",
    "nexus.mcp.provider_registry",
    "nexus.mcp.oauth_mappings",
    "nexus.skills.parser",
    "nexus.server.auth.oauth_factory",
    "nexus.workflows.storage",
]
# yaml/requests stubs handled at project level
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.server.auth.oidc"
# requests stubs
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "nexus.fuse.cache",
    "nexus.core.rebac_iterator_cache",
    "nexus.core.rebac_cache",
    "nexus.core.permission_boundary_cache",
    "nexus.core.agent_registry",
    "nexus.identity.key_service",
    "nexus.core.reputation_service",
]
# cachetools returns Any from generic cache
disable_error_code = ["import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.config"
# pydantic v2 API, yaml stubs
disable_error_code = ["import-untyped", "attr-defined", "typeddict-item"]

[[tool.mypy.overrides]]
module = [
    "nexus.server.subscriptions.models",
    "nexus.server.subscriptions.manager",
]
# pydantic v2 API
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "nexus.llm.message"
# pydantic BaseModel.model_dump
disable_error_code = ["no-any-return", "misc"]

[[tool.mypy.overrides]]
module = ["nexus.core._metadata_generated", "nexus.core._compact_generated"]
# CompactFileMetadata.to_file_metadata() returns Any
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "nexus.raft",
    "nexus.raft.*",
]
# Generated gRPC/protobuf and Raft infrastructure - not yet typed (Issue #1159)
# skip = treat as unresolvable, same as before raft files were committed
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "nexus.storage.raft_metadata_store"
# PyO3 FFI wrapper - Rust methods not visible to mypy, complex Optional handling
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "nexus",
    "nexus.cli.commands.work",
    "nexus.cli.commands.search",
    "nexus.core.nexus_fs",
    "nexus.core.nexus_fs_core",
    "nexus.core.nexus_fs_versions",
    "nexus.core.nexus_fs_share_links",
    "nexus.core.nexus_fs_search",
    "nexus.services.version_service",
    "nexus.services.search_service",
    "nexus.services.gateway",
    "nexus.server.fastapi_server",
    "nexus.search.semantic",
    "nexus.storage.database",
    "nexus.core.distributed_lock",
]
# Raft module uses follow_imports=skip (PyO3), so callers get Any - suppress no-any-return
disable_error_code = ["attr-defined", "union-attr", "no-any-return"]
warn_unused_ignores = false

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["benchmarks/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101", "B905", "SIM105"]  # Tests: allow unused args, assert, zip, suppress
"tests/integration/test_raft_client_service.py" = ["ARG", "S101", "E402", "B017", "SIM105"]  # Conditional imports, blind assert
"tests/integration/test_raft_metadata_store.py" = ["ARG", "S101", "B905", "F841"]  # zip strict, unused vars
"tests/integration/mcp/test_mcp_server_integration.py" = ["ARG", "S101", "B904"]  # raise from
"alembic/*" = ["UP007", "E402"]  # Alembic: Union syntax, import order
"src/nexus/backends/*.py" = ["ARG002"]  # Keep unused context params for API compatibility
"src/nexus/core/ace/trajectory.py" = ["ARG002"]  # Keep unused permission param for API compatibility
"src/nexus/core/cache_store.py" = ["ARG002"]  # NullCacheStore: Null Object pattern — unused args by design
"src/nexus/core/nexus_fs.py" = ["ARG002"]  # Constructor accepts cache params for public API
"src/nexus/core/distributed_lock.py" = ["ARG002"]  # Interface method signature
"src/nexus/raft/__init__.py" = ["E402"]  # Conditional imports require try/except after TYPE_CHECKING
"src/nexus/raft/transport_pb2_grpc.py" = ["ARG002"]  # Auto-generated gRPC stubs
"src/nexus/raft/client.py" = ["SIM105"]  # datetime parsing with fallback
"src/nexus/storage/raft_metadata_store.py" = ["ARG002", "SIM105", "SIM108", "SIM102"]  # Interface + datetime parsing + style
"src/nexus/storage/sql_metadata_store.py" = ["ARG002"]  # Interface consistency param for API compatibility
"scripts/*.py" = ["ARG001"]  # Utility scripts

[tool.ruff.lint.isort]
known-first-party = ["nexus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "grpcio-tools>=1.76.0",
    "types-protobuf>=6.32.1.20251210",
]
